--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,9 +1,3 @@
-*{
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-body{
-  min-height: 100vh;
-  
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
